Fixed double borders when there are 4 rows

--- a/src/_scss/pages/awardV2/idv/_awardAmounts.scss
+++ b/src/_scss/pages/awardV2/idv/_awardAmounts.scss
@@ -258,13 +258,13 @@
 
     .award-amounts__data-content {
         @extend %column-less-table__row;
+        border-bottom: 0;
         &:nth-of-type(1) {
             border-radius: rem(5) rem(5) 0 0;
-            border-bottom: 0;
         }
         &:last-of-type {
             border-radius: 0 0 rem(5) rem(5);
-            border-top: 0;
+            border-bottom: solid rem(1) $border-light-gray;
         }
     }
 
